# eo-proto-merge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
eo_proto_merge/: cli.py  sources.py
protomerge/: cli.py  merger.py  models.py  sources.py
tests/: test_merger.py  test_sources.py
tests/fixtures/base/: protocol.xml
tests/fixtures/ext_append/: protocol.xml
tests/fixtures/ext_append_switch/: protocol.xml
tests/fixtures/ext_conflict/: protocol.xml
tests/fixtures/ext_new/: protocol.xml
tests/fixtures/ext_replace/: protocol.xml
