[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protomerge"
version = "0.1.0"
description = "CLI tool for merging eo-protocol extensions and generating extended protocol XML"
authors = [{ name = "Richard Leek", email = "richard@richardleek.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
dependencies = ["typer[all]>=0.12", "rich>=13", "gitpython>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
protomerge = "protomerge.cli:app"

[project.urls]
Repository = "https://github.com/sorokya/protomerge"

[tool.setuptools.packages.find]
where = ["."]
include = ["protomerge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
